// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`stdio/printer printRecord should return a list of items with indices for an array 1`] = `
"┌───┬──────────────────┐
│ 0 │ something        │
├───┼──────────────────┤
│ 1 │ 0                │
├───┼──────────────────┤
│ 2 │ false            │
├───┼──────────────────┤
│ 3 │ 1                │
├───┼──────────────────┤
│ 4 │ null             │
├───┼──────────────────┤
│ 5 │ undefined        │
├───┼──────────────────┤
│ 6 │ Symbol(oh hello) │
├───┼──────────────────┤
│ 7 │ () => { }        │
└───┴──────────────────┘"
`;

exports[`stdio/printer printRecord should return a list of items with indices for an object 1`] = `
"┌───────────┬──────────────────┐
│ string    │ something        │
├───────────┼──────────────────┤
│ number    │ 0                │
├───────────┼──────────────────┤
│ boolean   │ false            │
├───────────┼──────────────────┤
│ bigint    │ 1                │
├───────────┼──────────────────┤
│ null      │ null             │
├───────────┼──────────────────┤
│ undefined │ undefined        │
├───────────┼──────────────────┤
│ symbol    │ Symbol(oh hello) │
├───────────┼──────────────────┤
│ function  │ () => { }        │
└───────────┴──────────────────┘"
`;

exports[`stdio/printer printRecord should return a list of items with indices with a title for an array 1`] = `
"┌──────────────────────┐
│ My items             │
├───┬──────────────────┤
│ 0 │ something        │
├───┼──────────────────┤
│ 1 │ 0                │
├───┼──────────────────┤
│ 2 │ false            │
├───┼──────────────────┤
│ 3 │ 1                │
├───┼──────────────────┤
│ 4 │ null             │
├───┼──────────────────┤
│ 5 │ undefined        │
├───┼──────────────────┤
│ 6 │ Symbol(oh hello) │
├───┼──────────────────┤
│ 7 │ () => { }        │
└───┴──────────────────┘"
`;

exports[`stdio/printer printRecord should return a list of items with indices with a title for an object 1`] = `
"┌──────────────────────────────┐
│ My items                     │
├───────────┬──────────────────┤
│ string    │ something        │
├───────────┼──────────────────┤
│ number    │ 0                │
├───────────┼──────────────────┤
│ boolean   │ false            │
├───────────┼──────────────────┤
│ bigint    │ 1                │
├───────────┼──────────────────┤
│ null      │ null             │
├───────────┼──────────────────┤
│ undefined │ undefined        │
├───────────┼──────────────────┤
│ symbol    │ Symbol(oh hello) │
├───────────┼──────────────────┤
│ function  │ () => { }        │
└───────────┴──────────────────┘"
`;

exports[`stdio/printer printRecord should return a nested list for a nested object 1`] = `
"┌──────────────┬──────────────────────────────────┐
│ string       │ something                        │
├──────────────┼──────────────────────────────────┤
│ number       │ 0                                │
├──────────────┼──────────────────────────────────┤
│ boolean      │ false                            │
├──────────────┼──────────────────────────────────┤
│ bigint       │ 1                                │
├──────────────┼──────────────────────────────────┤
│ null         │ null                             │
├──────────────┼──────────────────────────────────┤
│ undefined    │ undefined                        │
├──────────────┼──────────────────────────────────┤
│ symbol       │ Symbol(oh hello)                 │
├──────────────┼──────────────────────────────────┤
│ function     │ () => { }                        │
├──────────────┼──────────────────────────────────┤
│ nestedArray  │ ┌───┬──────────────────┐         │
│              │ │ 0 │ something        │         │
│              │ ├───┼──────────────────┤         │
│              │ │ 1 │ 0                │         │
│              │ ├───┼──────────────────┤         │
│              │ │ 2 │ false            │         │
│              │ ├───┼──────────────────┤         │
│              │ │ 3 │ 1                │         │
│              │ ├───┼──────────────────┤         │
│              │ │ 4 │ null             │         │
│              │ ├───┼──────────────────┤         │
│              │ │ 5 │ undefined        │         │
│              │ ├───┼──────────────────┤         │
│              │ │ 6 │ Symbol(oh hello) │         │
│              │ ├───┼──────────────────┤         │
│              │ │ 7 │ () => { }        │         │
│              │ └───┴──────────────────┘         │
├──────────────┼──────────────────────────────────┤
│ nestedObject │ ┌───────────┬──────────────────┐ │
│              │ │ string    │ something        │ │
│              │ ├───────────┼──────────────────┤ │
│              │ │ number    │ 0                │ │
│              │ ├───────────┼──────────────────┤ │
│              │ │ boolean   │ false            │ │
│              │ ├───────────┼──────────────────┤ │
│              │ │ bigint    │ 1                │ │
│              │ ├───────────┼──────────────────┤ │
│              │ │ null      │ null             │ │
│              │ ├───────────┼──────────────────┤ │
│              │ │ undefined │ undefined        │ │
│              │ ├───────────┼──────────────────┤ │
│              │ │ symbol    │ Symbol(oh hello) │ │
│              │ ├───────────┼──────────────────┤ │
│              │ │ function  │ () => { }        │ │
│              │ └───────────┴──────────────────┘ │
└──────────────┴──────────────────────────────────┘"
`;

exports[`stdio/printer printRecord should return a nested list for a nested object in array 1`] = `
"┌───┬──────────────────────────────────┐
│ 0 │ something                        │
├───┼──────────────────────────────────┤
│ 1 │ 0                                │
├───┼──────────────────────────────────┤
│ 2 │ false                            │
├───┼──────────────────────────────────┤
│ 3 │ 1                                │
├───┼──────────────────────────────────┤
│ 4 │ null                             │
├───┼──────────────────────────────────┤
│ 5 │ undefined                        │
├───┼──────────────────────────────────┤
│ 6 │ Symbol(oh hello)                 │
├───┼──────────────────────────────────┤
│ 7 │ () => { }                        │
├───┼──────────────────────────────────┤
│ 8 │ ┌───┬──────────────────┐         │
│   │ │ 0 │ something        │         │
│   │ ├───┼──────────────────┤         │
│   │ │ 1 │ 0                │         │
│   │ ├───┼──────────────────┤         │
│   │ │ 2 │ false            │         │
│   │ ├───┼──────────────────┤         │
│   │ │ 3 │ 1                │         │
│   │ ├───┼──────────────────┤         │
│   │ │ 4 │ null             │         │
│   │ ├───┼──────────────────┤         │
│   │ │ 5 │ undefined        │         │
│   │ ├───┼──────────────────┤         │
│   │ │ 6 │ Symbol(oh hello) │         │
│   │ ├───┼──────────────────┤         │
│   │ │ 7 │ () => { }        │         │
│   │ └───┴──────────────────┘         │
├───┼──────────────────────────────────┤
│ 9 │ ┌───────────┬──────────────────┐ │
│   │ │ string    │ something        │ │
│   │ ├───────────┼──────────────────┤ │
│   │ │ number    │ 0                │ │
│   │ ├───────────┼──────────────────┤ │
│   │ │ boolean   │ false            │ │
│   │ ├───────────┼──────────────────┤ │
│   │ │ bigint    │ 1                │ │
│   │ ├───────────┼──────────────────┤ │
│   │ │ null      │ null             │ │
│   │ ├───────────┼──────────────────┤ │
│   │ │ undefined │ undefined        │ │
│   │ ├───────────┼──────────────────┤ │
│   │ │ symbol    │ Symbol(oh hello) │ │
│   │ ├───────────┼──────────────────┤ │
│   │ │ function  │ () => { }        │ │
│   │ └───────────┴──────────────────┘ │
└───┴──────────────────────────────────┘"
`;

exports[`stdio/printer printRecord should return an empty string for an empty array 1`] = `""`;
